Add gitignore for IDEA

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,44 @@
-*.class
-*.jar
+# Eclipse stuff
 .classpath
 .project
-bin
+.settings/
 
-/target
+# netbeans
+nbproject/
+nbactions.xml
+nb-configuration.xml
+
+# we use maven!
+build.xml
+
+# maven
+target/
+dependency-reduced-pom.xml
+
+# vim
+.*.sw[a-p]
+
+# various other potential build files
+build/
+bin/
+dist/
+out/
+manifest.mf
+
+# Mac filesystem dust
+.DS_Store/
+
+# intellij
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# other files
+*.log*
+.git/
+
+# delombok
+*/src/main/lombok
+/target/
+/bin/
