--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.mcversion>v1_11_R1</project.mcversion>
+    <project.serverversion>1.11.2-R0.1</project.serverversion>
+    <project.bkcversion>1.11.2-v2</project.bkcversion>
+    <project.tcversion>1.11.2-v2-SNAPSHOT</project.tcversion>
+    <project.mwversion>1.11.2-v2-SNAPSHOT</project.mwversion>
   </properties>
 
   <repositories>
@@ -22,36 +27,30 @@
     </repository>
     <!-- Repo for access to BKCommonLib -->
     <repository>
-      <id>mg-dev-repo</id>
-      <url>http://maven.mg-dev.eu/</url>
+      <id>MG-Dev Jenkins CI Maven Repository</id>
+      <url>https://ci.mg-dev.eu/plugin/repository/everything</url>
     </repository>
   </repositories>
 
   <dependencies>
     <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>bukkit</artifactId>
-      <version>1.8.7-R0.1-SNAPSHOT</version>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+      <version>${project.serverversion}-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.bergerkiller.bukkit</groupId>
       <artifactId>BKCommonLib</artifactId>
-      <version>1.66-SNAPSHOT</version>
+      <version>${project.bkcversion}</version>
       <scope>provided</scope>
   	</dependency>
   	<dependency>
   	  <groupId>com.bergerkiller.bukkit</groupId>
   	  <artifactId>TrainCarts</artifactId>
-  	  <version>1.74-SNAPSHOT</version>
+  	  <version>${project.tcversion}</version>
   	  <scope>provided</scope>
   	</dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <!-- Build -->
@@ -73,8 +72,38 @@
       <!-- Compiler plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <version>${project.version}</version>
+                  <type>jar</type>
+                  <overWrite>true</overWrite>
+                  <outputDirectory>${project.build.directory}</outputDirectory>
+                  <destFileName>${project.name}.jar</destFileName>
+                </artifactItem>
+              </artifactItems>
+              <overWriteReleases>false</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- Compiler plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.1</version>
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
